plowshare (0.9.4svn) stable; urgency=low

  * [mediafire] Add upload function
  * [2shared] Add delete function

 -- Arnau Sanchez <tokland@gmail.com>  Mon, 07 Jun 2010 16:22:10 +0200

plowshare (0.9.3) stable; urgency=high

  * Add 1 new module (free download): 115.com
  * Add list support: megaupload, sendspace
  * [plowdown] New fancy countdown
  * [plowup] Show curl upload progress
  * [download] Fix broken modules: badongo, divshare.com, filefactory, mediafire
  * [zshare] Fix missing description field (upload)

 -- Arnau Sanchez <tokland@gmail.com>  Fri, 04 Jun 2010 10:52:08 +0200

plowshare (0.9.2) unstable; urgency=medium

  * Add 3 new modules (free download): filefactory, humyo, data.hu
  * Deleted 2 modules (now use recaptcha): loadfiles.in, freakshare.net
  * [rapidshare] Add premium-zone upload
  * [zshare] Add delete function
  * [mediafire] Fix free download (website keeps changing ofuscated javascript code)
  * [download] Add --temp-directory option (saves partial download here before mv)
  * [download] Add -x/--no-overwrite option (do not overwrite existing files)
  * [download] Add -v1/-v2/-v3 verbosity message level
  * Add plowlist: Download a list of links inside folder/containers

 -- Arnau Sanchez <tokland@gmail.com>  Sun, 21 Feb 2010 10:45:52 +0100

plowshare (0.9.1) stable; urgency=medium

  * Add 4 new modules (anonymous download): divshare.com, freakshare.net, 
    loadfiles.in, dl.free.fr
  * [zshare] Add anonymous upload
  * [download] Add --get-module option (aimed for wrappers to manage parallel download)
  * [download] Add -t/--timeout option (restrict time for download a link)
  * [download] Add --max-retries option (restrict attemps for loop, mostly captchas)
  * [rapidshare] add Premium-Zone download

 -- Arnau Sanchez <tokland@gmail.com>  Tue, 09 Feb 2010 12:43:07 +0100

plowshare (0.9) stable; urgency=medium

  * Add 7 new modules (anonymous download): netload.in, storage.to, uploaded.to, 