@@ -11,7 +11,7 @@ _Plowshare_ is a command-line downloader and uploader for some of the most popul
 || [http://www.depositfiles.com DepositFiles] || anonymous || -|| -|| -||
 || [http://www.divshare.com divShare] || anonymous || -|| -|| -||
 || [http://dl.free.fr dl.free.fr] || anonymous || -|| -|| -||
-|| [http://www.filefactory.com FileFactory] || anonymous || -|| -|| -||
+|| [http://www.filefactory.com FileFactory] || anonymous || -|| -|| yes ||
 || [http://www.humyo.com Humyo] || anonymous || -|| -|| -||
 || [http://www.mediafire.com Mediafire] || anonymous || anonymous || -|| yes ||
 || [http://www.megaupload.com Megaupload] || anonymous, free-membership and premium || anonymous, free-membership and premium (multifetch support) || yes || yes ||
